# Basic-Engine

./: .gitignore  CMakeLists.txt  README.md
include/: Application.h  Camera.h  Entity.h  InputManager.h  Lighting.h  Material.h  Menu.h  Mesh.h  Renderer.h  Scene.h  Shader.h  TextureManager.h  Utils.h  Window.h
shaders/: basic.frag  basic.vert  lightSource.frag
src/: Application.cpp  Camera.cpp  Entity.cpp  InputManager.cpp  Lighting.cpp  Menu.cpp  Mesh.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  TextureManager.cpp  Window.cpp  main.cpp
